// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicUsageExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    Hover me
  </button>
</DocumentFragment>
`;

exports[`ControlledExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    点击
  </button>
</DocumentFragment>
`;

exports[`PlacementsExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    Left
  </button>
  <button
    class="t-button t-button--line"
  >
    Top
  </button>
  <button
    class="t-button t-button--line"
  >
    Bottom
  </button>
  <button
    class="t-button t-button--line"
  >
    Right
  </button>
</DocumentFragment>
`;

exports[`TriggersExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    Hover me
  </button>
  <button
    class="t-button t-button--line"
  >
    Focus me
  </button>
  <button
    class="t-button t-button--line"
  >
    Click me
  </button>
  <button
    class="t-button t-button--line"
  >
    Right Click me
  </button>
</DocumentFragment>
`;
